--- a/package.xml
+++ b/package.xml
@@ -49,6 +49,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>uvc_camera</build_depend>
+  <build_depend>tf</build_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
